data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -255,11 +255,8 @@ series:
         dtend: 2021-11-04 20:30:00+01:00
       image: https://secure.meetupstatic.com/photos/event/3/3/2/b/600_499753099.jpeg
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 4:00 PM: Tématem WUDu 2021 je důvěra, integrita a etika v UX designu. WUD bude letos kratší, večerní, a bude mít formu panelové diskuse.
-
-
-        Diskutovat budeme o tom, jaké otázky si mám'
-      og_title: 'World Usability Day 2021: Důvěra, integrita a etika | Meetup'
+      meta_description: 'Thu, Nov 11, 2021, 5:00 PM: Tématem WUDu 2021 je důvěra, integrita a etika v UX designu. WUD bude letos kratší, večerní, a bude mít formu panelové diskuse.Diskutovat budeme o tom, jaké otázky si máme '
+      og_title: 'World Usability Day 2021: Důvěra, integrita a etika'
       url: https://www.meetup.com/asociace-ux/events/281853283/
       ical:
         summary: 'World Usability Day 2021: Důvěra, integrita a etika'
@@ -283,8 +280,8 @@ series:
         dtend: 2021-11-11 20:30:00+01:00
       image: https://secure.meetupstatic.com/photos/event/a/a/7/4/600_500083636.jpeg
   - meetupcom:
-      meta_description: 'Tue, Dec 7, 5:00 PM: UX dinner is a meeting of the UX community in Brno, where an informal dinner, a discussion about small design problems, the opportunity to find a mentor or a new project aw'
-      og_title: UX Dinner Brno in December | Meetup
+      meta_description: 'Tue, Dec 7, 2021, 6:00 PM: UX dinner is a meeting of the UX community in Brno, where an informal dinner, a discussion about small design problems, the opportunity to find a mentor or a new project awa'
+      og_title: UX Dinner Brno in December
       image: https://secure.meetupstatic.com/photos/event/5/3/4/5/600_500301317.jpeg
       url: https://www.meetup.com/asociace-ux/events/282115964/
       ical:
@@ -307,11 +304,8 @@ series:
         dtstart: 2021-12-07 18:00:00+01:00
         dtend: 2021-12-07 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 6:00 PM: Interested in UX writing? Want to hear from UX writers and designers about how they work together?
-
-
-        Join Prague UX Writers for our 24th meetup! 🍻'
-      og_title: PRAGUE UX WRITERS MEETUP Vol. 24 - December | Meetup
+      meta_description: 'Thu, Dec 2, 2021, 7:00 PM: Interested in UX writing? Want to hear from UX writers and designers about how they work together?Join Prague UX Writers for our 24th meetup! 🍻'
+      og_title: PRAGUE UX WRITERS MEETUP Vol. 24 - December
       image: https://secure.meetupstatic.com/photos/event/a/c/1/2/600_500324050.jpeg
       url: https://www.meetup.com/asociace-ux/events/282196849/
       ical:
