--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -81,8 +81,8 @@ series:
         dtstart: 2021-10-14 17:00:00+02:00
         dtend: 2021-10-14 19:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      meta_description: 'Thu, Nov 11, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Nov 11, 2021, 5:00 PM'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsyccpbpb/
       ical:
@@ -106,8 +106,8 @@ series:
         dtstart: 2021-11-11 17:00:00+01:00
         dtend: 2021-11-11 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 9, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      meta_description: 'Thu, Dec 9, 2021, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, po'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Dec 9, 2021, 5:00 PM'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsyccqbmb/
       ical:
@@ -131,8 +131,8 @@ series:
         dtstart: 2021-12-09 17:00:00+01:00
         dtend: 2021-12-09 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Jan 13, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      meta_description: 'Thu, Jan 13, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Jan 13, 2022, 5:00 PM'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsydccbrb/
       ical:
@@ -156,8 +156,8 @@ series:
         dtstart: 2022-01-13 17:00:00+01:00
         dtend: 2022-01-13 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Feb 10, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      meta_description: 'Thu, Feb 10, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Feb 10, 2022, 5:00 PM'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsydcdbnb/
       ical:
@@ -181,8 +181,8 @@ series:
         dtstart: 2022-02-10 17:00:00+01:00
         dtend: 2022-02-10 19:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Mar 10, 4:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
-      og_title: '[ONLINE] CZSK PPUG Setkání a povídání | Meetup'
+      meta_description: 'Thu, Mar 10, 2022, 5:00 PM: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p'
+      og_title: '[ONLINE] CZSK PPUG Setkání a povídání, Thu, Mar 10, 2022, 5:00 PM'
       image: https://secure.meetupstatic.com/photos/event/5/f/2/0/600_489324352.jpeg
       url: https://www.meetup.com/czskppug/events/dgxdqsydcfbnb/
       ical:
