--- a/data/sources/prague-ai.yaml
+++ b/data/sources/prague-ai.yaml
@@ -207,8 +207,8 @@ series:
         dtend: 2021-11-16 18:00:00+01:00
       image: https://secure.meetupstatic.com/photos/event/1/d/5/e/600_500167518.jpeg
   - meetupcom:
-      meta_description: 'Wed, Dec 1, 9:00 AM: Machine-Learning can help every organisation solve the most challenging analytical problems, but complex systems and skills gaps can prevent organisations from exploiting i'
-      og_title: Accelerating Machine-Learning with Snowflake and H2O.ai | Meetup
+      meta_description: 'Wed, Dec 1, 2021, 10:00 AM: Machine-Learning can help every organisation solve the most challenging analytical problems, but complex systems and skills gaps can prevent organisations from exploiting i'
+      og_title: Accelerating Machine-Learning with Snowflake and H2O.ai
       image: https://secure.meetupstatic.com/photos/event/7/2/d/f/600_500129407.jpeg
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/281995999/
       ical:
@@ -232,11 +232,8 @@ series:
         dtstart: 2021-12-01 10:00:00+01:00
         dtend: 2021-12-01 11:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Nov 18, 6:00 PM: Hello Maker,
-
-
-        Join us on November 18th for our next live event on LinkedIn, Twitter, and YouTube. I will be discussing the H2O.ai Wildfire Challenge (our first AI competiti'
-      og_title: 'Make with H2O: Introducing the Wildfire Challenge | Meetup'
+      meta_description: 'Thu, Nov 18, 2021, 7:00 PM: Hello Maker,Join us on November 18th for our next live event on LinkedIn, Twitter, and YouTube. I will be discussing the H2O.ai Wildfire Challenge (our first AI competition'
+      og_title: 'Make with H2O: Introducing the Wildfire Challenge'
       image: https://secure.meetupstatic.com/photos/event/6/d/8/7/600_500248039.jpeg
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/282102611/
       ical:
@@ -260,8 +257,8 @@ series:
         dtstart: 2021-11-18 19:00:00+01:00
         dtend: 2021-11-18 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 3:00 PM: The possibilities of AI in the production process seem to be almost limitless, from autonomous driving to secure payment transactions. Especially in the manufacturing indus'
-      og_title: AI-Driven Manufacturing  | Meetup
+      meta_description: 'Thu, Dec 2, 2021, 4:00 PM: The possibilities of AI in the production process seem to be almost limitless, from autonomous driving to secure payment transactions. Especially in the manufacturing indust'
+      og_title: 'AI-Driven Manufacturing '
       image: https://secure.meetupstatic.com/photos/event/a/1/c/6/600_500261414.jpeg
       url: https://www.meetup.com/Prague-Artificial-Intelligence-Deep-Learning/events/282116019/
       ical:
