--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -131,8 +131,8 @@ series:
         dtstart: 2021-10-11 08:00:00+02:00
         dtend: 2021-10-11 18:00:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 11, 5:00 PM: 𝐀𝐛𝐨𝐮𝐭 𝐭𝐡𝐞 𝐭𝐚𝐥𝐤: although there is an endless number of technical questions you can be asked during an interview, there are some common patterns that come up ver'
-      og_title: How to Nail Your Next Technical Interview | Meetup
+      meta_description: 'Thu, Nov 11, 2021, 6:00 PM: 𝐀𝐛𝐨𝐮𝐭 𝐭𝐡𝐞 𝐭𝐚𝐥𝐤: although there is an endless number of technical questions you can be asked during an interview, there are some common patterns that come up ver'
+      og_title: How to Nail Your Next Technical Interview
       image: https://secure.meetupstatic.com/photos/event/6/7/b/d/600_499466557.jpeg
       url: https://www.meetup.com/Pure-Storage-Talks/events/281401178/
       ical:
@@ -156,8 +156,8 @@ series:
         dtstart: 2021-11-11 18:00:00+01:00
         dtend: 2021-11-11 19:30:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Dec 9, 5:00 PM: PURE has landed in Prague 2 years ago and what a journey has been since then. We have proven that we are a strong company even through most difficult of times, a company th'
-      og_title: 'Story of PURE in Prague || Chapter Two: Hacking the Future of Data | Meetup'
+      meta_description: 'Thu, Dec 9, 2021, 6:00 PM: PURE has landed in Prague 2 years ago and what a journey has been since then. We have proven that we are a strong company even through most difficult of times, a company tha'
+      og_title: 'Story of PURE in Prague || Chapter Two: Hacking the Future of Data'
       image: https://secure.meetupstatic.com/photos/event/a/7/8/600_500162680.jpeg
       url: https://www.meetup.com/Pure-Storage-Talks/events/282039970/
       ical:
