--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -30,11 +30,8 @@ series:
         dtstart: 2021-09-30 18:30:00+02:00
         dtend: 2021-09-30 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 7, 4:30 PM: Let''s code together and build something interesting. Work on your own project or join in on the group project.
-
-
-        Bring a laptop and a sense of adventure, all levels welcome.'
-      og_title: Coding Session  | Meetup
+      meta_description: 'Thu, Oct 7, 2021, 6:30 PM: Let''s code together and build something interesting. Work on your own project or join in on the group project.Bring a laptop and a sense of adventure, all levels welcome.Ple'
+      og_title: 'Coding Session '
       image: https://secure.meetupstatic.com/photos/event/a/b/0/600_499262736.jpeg
       url: https://www.meetup.com/the-social-programers/events/281199410/
       ical:
@@ -58,8 +55,8 @@ series:
         dtstart: 2021-10-07 18:30:00+02:00
         dtend: 2021-10-07 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 4:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
-      og_title: Coding session - V3  | Meetup
+      meta_description: 'Thu, Oct 14, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: 'Coding session - V3 '
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281374093/
       ical:
@@ -83,8 +80,8 @@ series:
         dtstart: 2021-10-14 18:30:00+02:00
         dtend: 2021-10-14 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 27, 4:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
-      og_title: Coding session V4 | Meetup
+      meta_description: 'Wed, Oct 27, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: Coding session V4
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281669240/
       ical:
@@ -108,11 +105,8 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 18, 6:00 PM: Coding Session
-
-
-        Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lap'
-      og_title: Coding session V5 | Meetup
+      meta_description: 'Thu, Nov 18, 2021, 7:00 PM: Coding SessionLet''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lapto'
+      og_title: Coding session V5
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/282078876/
       ical:
