--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -129,3 +129,28 @@ series:
         url: https://www.meetup.com/the-social-programers/events/282078876/
         dtstart: 2021-11-18 19:00:00+01:00
         dtend: 2021-11-18 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 25, 2021, 7:00 PM: Coding SessionLet''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lapto'
+      og_title: Coding session V6
+      image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
+      url: https://www.meetup.com/the-social-programers/events/282255318/
+      ical:
+        summary: Coding session V6
+        description: 'The Social Programmers
+
+          Thursday, November 25 at 7:00 PM
+
+
+          Coding Session Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just g...
+
+
+          https://www.meetup.com/the-social-programers/events/282255318/'
+        location: Le due torri (Dukelských Hrdinů 46, 170 00 Praha 7-Holešovice, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282255318@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/282255318/
+        dtstart: 2021-11-25 19:00:00+01:00
+        dtend: 2021-11-25 21:00:00+01:00
