--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -203,3 +203,28 @@ series:
         url: https://www.meetup.com/frontendisti/events/mbjhpsydcfbmb/
         dtstart: 2022-03-09 19:00:00+01:00
         dtend: 2022-03-09 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Apr 13, 2022, 7:00 PM: Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat z Brna a z Prahy. Každ'
+      og_title: Meetup Frontedisti.cz, Wed, Apr 13, 2022, 7:00 PM
+      image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
+      url: https://www.meetup.com/frontendisti/events/mbjhpsydcgbrb/
+      ical:
+        summary: Meetup Frontedisti.cz
+        description: 'Frontendisti.cz
+
+          Wednesday, April 13 at 7:00 PM
+
+
+          Po online streamech a konferenci bychom podzim 2021 rádi zvládali jako kombinaci meetupu s online streamem. Hybridní akce budeme střídavě organizovat ...
+
+
+          https://www.meetup.com/frontendisti/events/mbjhpsydcgbrb/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_mbjhpsydcgbrb@meetup.com
+        url: https://www.meetup.com/frontendisti/events/mbjhpsydcgbrb/
+        dtstart: 2022-04-13 19:00:00+02:00
+        dtend: 2022-04-13 21:00:00+02:00
