--- a/data/sources/czech-testers.yaml
+++ b/data/sources/czech-testers.yaml
@@ -130,3 +130,28 @@ series:
         url: https://www.meetup.com/ProfessionalTesting/events/281067619/
         dtstart: 2021-09-29 18:00:00+02:00
         dtend: 2021-09-29 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Dec 8, 2021, 6:00 PM: Přednáška a praktická ukázka automatizovaného E2E testování Rest API pomocí Swaggeru.- Přednáška bude o E2E testování za pomoci API a Swaggru, díky čemuž můžete ověřit kvali'
+      og_title: 'online: QA Brno - Automatizované E2E testování API pomocí Swaggeru'
+      image: https://secure.meetupstatic.com/photos/event/9/8/7/600_500522439.jpeg
+      url: https://www.meetup.com/ProfessionalTesting/events/282376801/
+      ical:
+        summary: 'online: QA Brno - Automatizované E2E testování API pomocí Swaggeru'
+        description: 'CZECH TESTERS GROUP
+
+          Wednesday, December 8 at 6:00 PM
+
+
+          Přednáška a praktická ukázka automatizovaného E2E testování Rest API pomocí Swaggeru. - Přednáška bude o E2E testování za pomoci API a Swaggru, díky č...
+
+
+          https://www.meetup.com/ProfessionalTesting/events/282376801/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_282376801@meetup.com
+        url: https://www.meetup.com/ProfessionalTesting/events/282376801/
+        dtstart: 2021-12-08 18:00:00+01:00
+        dtend: 2021-12-08 20:00:00+01:00
