--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -156,8 +156,11 @@ series:
         dtstart: 2021-10-13 18:00:00+02:00
         dtend: 2021-10-13 20:00:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Oct 26, 2021, 6:00 PM: Pokud přemýšlíš o změně kariéry a zajímá tě programování, připoj se k naší informační schůzce, kde se dozvíš všechno potřebné o rekvalifikaci do tohoto oboru.Poznáš členy n'
-      og_title: 'Online informační schůzka: Jak se rekvalifikovat na programátora?'
+      meta_description: 'Tue, Oct 26, 4:00 PM: Pokud přemýšlíš o změně kariéry a zajímá tě programování, připoj se k naší informační schůzce, kde se dozvíš všechno potřebné o rekvalifikaci do tohoto oboru.
+
+
+        Poznáš členy'
+      og_title: 'Online informační schůzka: Jak se rekvalifikovat na programátora? | Meetup'
       url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/281629117/
       ical:
         summary: 'Online informační schůzka: Jak se rekvalifikovat na programátora?'
@@ -181,8 +184,8 @@ series:
         dtend: 2021-10-26 20:00:00+02:00
       image: https://secure.meetupstatic.com/photos/event/6/c/9/e/600_499707806.jpeg
   - meetupcom:
-      meta_description: 'Thu, Dec 2, 2021, 6:00 PM: Připoj se k našemu večernímu workshopu, který bude probíhat online ve čtvrtek 2. prosince od 18 hodin. Probereme základy kódování a dozvíš se, co znamená pro-code a low-code'
-      og_title: 'Online workshop: Základy programování'
+      meta_description: 'Thu, Dec 2, 5:00 PM: Připoj se k našemu večernímu workshopu, který bude probíhat online ve čtvrtek 2. prosince od 18 hodin. Probereme základy kódování a dozvíš se, co znamená pro-code a low-cod'
+      og_title: 'Online workshop: Základy programování | Meetup'
       image: https://secure.meetupstatic.com/photos/event/3/1/e/9/600_500412777.jpeg
       url: https://www.meetup.com/Prague-Junior-Software-Developer-Course/events/282264181/
       ical:
