--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -55,8 +55,8 @@ series:
         dtstart: 2021-10-07 18:30:00+02:00
         dtend: 2021-10-07 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Oct 14, 4:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
-      og_title: Coding session - V3  | Meetup
+      meta_description: 'Thu, Oct 14, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: 'Coding session - V3 '
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281374093/
       ical:
@@ -80,8 +80,8 @@ series:
         dtstart: 2021-10-14 18:30:00+02:00
         dtend: 2021-10-14 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Oct 27, 4:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
-      og_title: Coding session V4 | Meetup
+      meta_description: 'Wed, Oct 27, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: Coding session V4
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/281669240/
       ical:
@@ -105,11 +105,8 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Nov 18, 6:00 PM: Coding Session
-
-
-        Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lap'
-      og_title: Coding session V5 | Meetup
+      meta_description: 'Thu, Nov 18, 2021, 7:00 PM: Coding SessionLet''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lapto'
+      og_title: Coding session V5
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/282078876/
       ical:
@@ -133,11 +130,8 @@ series:
         dtstart: 2021-11-18 19:00:00+01:00
         dtend: 2021-11-18 21:00:00+01:00
   - meetupcom:
-      meta_description: 'Thu, Nov 25, 6:00 PM: Coding Session
-
-
-        Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lap'
-      og_title: Coding session V6 | Meetup
+      meta_description: 'Thu, Nov 25, 2021, 7:00 PM: Coding SessionLet''s have a beer and code together and build something interesting. Work on your own project or join in on the group project or just get advise, grab a lapto'
+      og_title: Coding session V6
       image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
       url: https://www.meetup.com/the-social-programers/events/282255318/
       ical:
